--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- ===== CSS ===== -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Coffee 3D</title>
+        <title>Cozybrew</title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Coffee<br> Drink 3D</h1>
+                        <h1 class="home__title">Coffee<br> Cozybrew </h1>
                         <p class="home__description">Fuel Your Day, the Coffee Way.</p>
                         <a href="#" class="home__button">Get Started</a>
                     </div>
